--- a/constru.html
+++ b/constru.html
@@ -10,7 +10,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark"><!--Debut Nav Bar-->
         <div class="container-fluid">
-          <a class="navbar-brand" class="nav-link" href="Index.html" >Accueil</a>
+          <a class="navbar-brand" class="nav-link" href="index.html" >Accueil</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
