--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
       </nav>
 
 
-      <form action="mailto:info@w3docs.com" method="get" enctype="text/plain">
+      <form action="mailto:info@philippe.degrez@cesjb.be" method="get" enctype="text/plain">
       <p>Nom: <input type="text" name="name" /></p>
       <p>Email: <input type="text" name="email" /></p>
       <p>
