--- a/contact.html
+++ b/contact.html
@@ -36,12 +36,12 @@
       <p>
         Commentaires:
         <br />
-        <textarea name="comments" rows="12" cols="35">Envoyez votre commentaires au site Web.</textarea>
+        <textarea name="comments" rows="12" cols="35" placeholder="Envoyez votre commentaires au site Web"></textarea>
         <br />
       </p>
 
       <p>
-        <input type="submit" name="submit" value="Send" />
+        <input type="submit" name="submit" value="Envoyer" />
         <input type="reset" name="reset" value="Clear Form" />
       </p>
     </form>
