--- a/info.html
+++ b/info.html
@@ -115,7 +115,8 @@
           <strong>Scie à métaux :</strong> La scie à métaux est un outil conçu pour scier les métaux, mais aussi d'autres matériaux durs.<br/>
           <strong>Pointe Carrée :</strong> Pointe carrée idéale pour obtenir des avant-trous, des chanfreinages ou encore des ébavurages, elle est composée d'une lame carrée en acier au chrome-vanadium et d'un manche en acétate de cellulose.<br/>
           <strong>Serre-joint :</strong>Outil servant à maintenir serrées les unes contre les autres des planches assemblées ou collées par des joints. <br/>
-
+	Voici un exercice sur les Outils : <strong>https://learningapps.org/7869788</strong>
+	Voici un exercice sur les Métiers : <strong>https://learningapps.org/8817733</stong>
 
         </div>
         <div class="col-md-6">
